--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
       name="description"
       content="Aisha is a search and retrieval AI chat for any kind document or data source you have"
     />
-    <meta property="og:title" content="Aisha for code" />
-    <meta property="og:url" content="https://aisha.technology-robot.com" />
+    <meta property="og:title" content="Aisha for product recommendation" />
+    <meta property="og:url" content="https://aisha-pd.technology-robot.com" />
     <meta property="og:description" content="Aisha is a search and retrieval AI chat for any kind document or data source you have" />
     <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
-  
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
